syntax = "proto3";

option java_package = "io.anemos.metastore.v1alpha1";
option java_multiple_files = true;

package anemos.metastore.v1alpha1;

enum RuleType {
    UNSPECIFIED = 0;
    LINT = 1;

}

enum Severity {
    UNSET = 0;
    INFO = 1;
    WARNING = 2;
    ERROR = 3;
}

enum ChangeType {
    UNCHANGED = 0;
    CHANGED = 1;
    ADDITION = 2;
    REMOVAL = 3;
}

enum TypeChange {
    TYPE_UNCHANGED = 0;
    TYPE_SAFE = 1;
    TYPE_LOOSE_INFO = 2;
}

enum LintRule {
    LINT_OK = 0;
    LINT_MESSAGE_NAME = 1;
    LINT_FIELD_NAME = 2;
}

message ResultCount {
    int32 lint_errors = 1;
    int32 lint_warnings = 2;
    int32 lint_infos = 3;
    int32 diff_errors = 4;
    int32 diff_warnings = 5;
    int32 diff_infos = 6;
}

message Report {
    map<string, FileResult> file_results = 1;
    map<string, MessageResult> message_results = 2;

    ResultCount result_count = 4;
}

message FileResult {
    string file_name = 1;
    repeated string message_result_ref = 2;

    ResultCount result_count = 3;
}

message MessageResult {
    string package = 1;
    string name = 2;

    repeated RuleInfo info = 3;

    ChangeInfo change = 4;

    repeated FieldResult field_results = 5;

    ResultCount result_count = 6;
}

message FieldResult {
    int32 index = 1;
    string name = 2;

    repeated RuleInfo info = 3;

    ChangeInfo change = 4;

    ResultCount result_count = 5;
}

message ChangeInfo {
    string from_name = 1;
    string to_name = 2;
    ChangeType change_type = 3;
    string from_type = 4;
    string to_type = 5;

}

message RuleInfo {
    RuleType type = 1;
    oneof rule {
        LintRule lint_rule = 2;
    }
    Severity severity = 4;

}

message SchemaDiff {
    repeated RuleInfo rules = 1;
}
